--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/app.js",
+    "test": "npx jest",
     "deploy": "git push heroku main"
   },
   "keywords": [],
@@ -14,6 +15,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cron": "^2.3.1",
     "dotenv": "^16.3.1",
